    and to deal with cards that change driver and break (e.g. madwifi ->
    madwifi-ng).

  [ Jonathan Riddell ]
  * KDE frontend:
    - Show % indicator on resize slider
    - Improve size/layout of some widgets
    - Don't call get_translations multiple times
    - Format time properly in non-latin locales
    - Make mountpoint comboboxes editable
    - Resize qtparted to fit window

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  8 May 2006 18:07:31 +0100

ubiquity (0.99.77) dapper; urgency=low

  * Run hw-detect to set up /etc/modules properly (closes: Malone #40826).
  * Mimic base-installer's logic to configure initramfs-tools with an
    appropriate resume partition (closes: Malone #42299).
  * Fix logging in apply_keyboard.
  * Handle trfu/trqu console keymaps the same way as trf/trq (closes: Malone
    #37867).
  * Map croat console keymap to hr (closes: Malone #43598).
  * Mimic xserver-xorg's logic regarding alternate US layouts for non-Latin
    keymaps.
  * Map et console keymap to ee (closes: Malone #42800).
  * Handle fi-latin1 console keymap the same way as fi (closes: Malone
    #42650).
  * Map mk, nl, ro, and ru console keymaps to the X keymaps by the same
    names.
  * Map gr console keymap to gr, and add it to the list of non-Latin
    keymaps.
  * Change sr-cy console keymap to map to cs, not sr, following
    xkeyboard-config changes. Add this to the list of non-Latin keymaps.
  * Automatic update of included source packages: hw-detect 1.32ubuntu6.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  8 May 2006 17:39:19 +0100

ubiquity (0.99.76) dapper; urgency=low

  * Make deselection of mount points actually have a useful effect on
    partman_commit (closes: Malone #35079).

 -- Colin Watson <cjwatson@ubuntu.com>  Sat,  6 May 2006 00:09:22 +0100

ubiquity (0.99.75) dapper; urgency=low

  * KDE frontend:
    - Fix resize slider handling in autopartitioner (closes: Malone #43015).
    - Fix handling of disk selections (closes: Malone #43125).